navbar collapsed links centered, height fixed on book overlay, centered account reviews placeholder

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,6 +130,10 @@ body {
   font-size: 150%;
 }
 
+.overlay-height {
+    height: 23px;
+}
+
 .btn {
   margin: 0;
 }
